--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $white;
+  background: #f9f1ca;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -276,6 +276,8 @@ nav {
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   background-color: $lightGray;
+  position:fixed;
+  bottom: 0px;
 }
 
 footer {
