--- a/style.scss
+++ b/style.scss
@@ -277,7 +277,8 @@ nav {
   border-bottom: 1px solid #ddd;
   background-color: $lightGray;
   position:fixed;
-  bottom: 0px;
+  bottom: 0;
+  width: 100%;
 }
 
 footer {
