--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-  background: #f9f1ca;
-  font: 18px/1.4 $helvetica;
+  background: $yellow;
+  font: 18px/1.4 $lucida;
   color: $darkGray;
 }
 
