--- a/style.scss
+++ b/style.scss
@@ -244,6 +244,7 @@ nav {
 .posts > .post {
   padding-bottom: 2em;
   border-bottom: 1px solid $lightGray;
+  position: relative;	
 }
 
 .posts > .post:last-child {
@@ -290,3 +291,9 @@ footer {
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
 @import "svg-icons";
+
+date-prev {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+}
