--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,7 @@ layout: default
 <article class="page">
 
   <h1>{{ page.title }}</h1>
+  <h4 class="date-prev">{{ page.date }}</h4>
 
   <div class="entry">
     {{ content }}
