--- a/style.scss
+++ b/style.scss
@@ -292,7 +292,7 @@ footer {
 @import "highlights";
 @import "svg-icons";
 
-date-prev {
+.date-prev {
   position: absolute;
   right: 0px;
   top: 0px;
