--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
-
+  <h4 class="date-prev">{{ page.date | date: "%d-%m-%Y" }}</h4>
   <div class="entry">
     {{ content }}
   </div>
